init flink